[package]
name = "hs110-logger"
version = "0.1.0"
authors = ["Sven Kube <git@sven-kube.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hs110 = { git = "https://github.com/SvenKube/hs110-rs.git" }
influent = "0.5.2"